--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
             if (currentProfile) {
                 localStorage.setItem('selectedSet', setName);
                 localStorage.setItem('currentProfile', JSON.stringify(currentProfile));
+                // Redirigir y solicitar pantalla completa
                 window.location.href = 'index2.html';
             }
         }
