--- a/index2.html
+++ b/index2.html
@@ -78,30 +78,22 @@
         .flashcard {
             width: 80vw;
             height: 80vh;
-            perspective: 1000px;
             position: relative;
-        }
-        .card-wrapper {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            transform-style: preserve-3d;
-            transition: transform 0.8s;
+            perspective: 1500px;
         }
         .card {
             width: 100%;
             height: 100%;
             position: absolute;
-            text-align: center;
-            border-radius: 10px;
-            background: linear-gradient(to bottom, #fff, #f0f0f0);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
             backface-visibility: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
+            border-radius: 10px;
             padding: 20px;
             box-sizing: border-box;
+            background: linear-gradient(to bottom, #fff, #f0f0f0);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         }
         .card h2 {
             margin: 0;
@@ -111,6 +103,7 @@
         .front {
             background-color: #3498DB;
             color: #fff;
+            transform: rotateY(0deg);
         }
         .back {
             background-color: #2ECC71;
@@ -174,10 +167,10 @@
             background-color: #2C3E50;
             color: #ECF0F1;
         }
-        body.night-mode .flashcard .card {
+        body.night-mode .card {
             background: linear-gradient(to bottom, #34495E, #2C3E50);
         }
-        body.night-mode .flashcard .card h2 {
+        body.night-mode .card h2 {
             color: #ECF0F1;
         }
         /* Estilos para dispositivos móviles */
@@ -228,7 +221,7 @@
         // Datos de flashcards integrados
         let flashcardSets = {
             'Anatomía': [
-                {question: '¿Qué es el húmero?', answer: 'Es un hueso largo del brazo.', explanation: 'Conecta el hombro con el codo.'},
+                {question: '¿Qué hueso conecta el hombro con el codo?', answer: 'El húmero.', explanation: 'Es un hueso largo del brazo.'},
                 // ... Añade más tarjetas
             ],
             // ... Otros conjuntos
@@ -242,8 +235,9 @@
         function loadFlashcards() {
             flashcards = flashcardSets[selectedSet];
             if (reviewLevel) {
-                flashcards = flashcards.filter((card, index) => {
-                    let cardKey = `${selectedSet}-${index}`;
+                flashcards = flashcards.map((card, index) => ({...card, originalIndex: index}));
+                flashcards = flashcards.filter((card) => {
+                    let cardKey = `${selectedSet}-${card.originalIndex}`;
                     return classifications[cardKey] === reviewLevel;
                 });
             }
@@ -287,26 +281,29 @@
             explanation.className = 'card explanation';
             explanation.innerHTML = `<h2><i class="fas fa-info-circle"></i> ${cardData.explanation}</h2>`;
 
-            // Contenedor de las caras
-            let cardWrapper = document.createElement('div');
-            cardWrapper.className = 'card-wrapper';
-            cardWrapper.style.transform = 'rotateY(0deg)';
-            cardWrapper.appendChild(front);
-            cardWrapper.appendChild(back);
-            cardWrapper.appendChild(explanation);
+            flashcard.appendChild(front);
+            flashcard.appendChild(back);
+            flashcard.appendChild(explanation);
+
+            // Posicionar las caras
+            front.style.transform = 'rotateY(0deg)';
+            back.style.transform = 'rotateY(180deg)';
+            explanation.style.transform = 'rotateX(180deg)';
 
             // Indicador de cara
             let faceIndicator = document.createElement('div');
             faceIndicator.className = 'face-indicator';
             faceIndicator.innerHTML = `<i class="fas fa-question-circle"></i> Pregunta`;
 
-            flashcard.appendChild(cardWrapper);
             flashcard.appendChild(faceIndicator);
 
             // Añadir eventos táctiles
             flashcard.addEventListener('touchstart', handleTouchStart, false);
             flashcard.addEventListener('touchmove', handleTouchMove, false);
             flashcard.addEventListener('touchend', handleTouchEnd, false);
+
+            // Variable para controlar el ángulo de rotación
+            flashcard.currentRotation = {x: 0, y: 0};
 
             return flashcard;
         }
@@ -327,25 +324,31 @@
         function flipCard(direction) {
             let flashcard = document.querySelector('.flashcard');
             let faceIndicator = flashcard.querySelector('.face-indicator');
-            let cardWrapper = flashcard.querySelector('.card-wrapper');
+            let rotation = flashcard.currentRotation;
+
             if (direction === 'next') {
                 currentFace = (currentFace + 1) % 3;
             } else {
                 currentFace = (currentFace - 1 + 3) % 3;
             }
-            let rotationY = -currentFace * 120;
-            gsap.to(cardWrapper, {duration: 0.8, rotationY: rotationY, ease: "power2.inOut"});
-            switch (currentFace) {
-                case 0:
-                    faceIndicator.innerHTML = `<i class="fas fa-question-circle"></i> Pregunta`;
-                    break;
-                case 1:
-                    faceIndicator.innerHTML = `<i class="fas fa-lightbulb"></i> Respuesta`;
-                    break;
-                case 2:
-                    faceIndicator.innerHTML = `<i class="fas fa-info-circle"></i> Explicación`;
-                    break;
+
+            if (currentFace === 0) {
+                rotation.x = 0;
+                rotation.y = 0;
+                faceIndicator.innerHTML = `<i class="fas fa-question-circle"></i> Pregunta`;
+            } else if (currentFace === 1) {
+                rotation.x = 0;
+                rotation.y = 180;
+                faceIndicator.innerHTML = `<i class="fas fa-lightbulb"></i> Respuesta`;
+            } else if (currentFace === 2) {
+                rotation.x = -180;
+                rotation.y = 0;
+                faceIndicator.innerHTML = `<i class="fas fa-info-circle"></i> Explicación`;
             }
+
+            gsap.to(flashcard, {duration: 0.8, rotationX: rotation.x, rotationY: rotation.y, ease: "power2.inOut"});
+
+            flashcard.currentRotation = rotation;
         }
 
         // Cambiar de flashcard
@@ -361,7 +364,7 @@
 
         // Clasificar tarjeta
         function classifyCard(level) {
-            let originalIndex = flashcards[currentCardIndex].originalIndex || currentCardIndex;
+            let originalIndex = flashcards[currentCardIndex].originalIndex !== undefined ? flashcards[currentCardIndex].originalIndex : currentCardIndex;
             let cardKey = `${selectedSet}-${originalIndex}`;
             classifications[cardKey] = level;
             localStorage.setItem('classifications', JSON.stringify(classifications));
