--- a/index.html
+++ b/index.html
@@ -228,26 +228,32 @@
         <h3>Selecciona un conjunto de flashcards</h3>
         <div class="set-list">
             <!-- Conjuntos de flashcards -->
-            <div class="set-card" onclick="selectSet('Anatomía')">
-                <i class="fas fa-bone"></i>
-                <h3>Anatomía</h3>
-                <p id="progress-Anatomía">0/10 tarjetas revisadas</p>
-            </div>
-            <div class="set-card" onclick="selectSet('Fisiología')">
-                <i class="fas fa-heartbeat"></i>
-                <h3>Fisiología</h3>
-                <p id="progress-Fisiología">0/10 tarjetas revisadas</p>
-            </div>
-            <div class="set-card" onclick="selectSet('Farmacología')">
-                <i class="fas fa-pills"></i>
-                <h3>Farmacología</h3>
-                <p id="progress-Farmacología">0/10 tarjetas revisadas</p>
-            </div>
-            <div class="set-card" onclick="selectSet('Microbiología')">
-                <i class="fas fa-virus"></i>
-                <h3>Microbiología</h3>
-                <p id="progress-Microbiología">0/10 tarjetas revisadas</p>
-            </div>
+<div class="set-card" onclick="selectSet('Anatomía')">
+    <i class="fas fa-bone"></i>
+    <h3>Anatomía</h3>
+    <p id="progress-Anatomía">0/10 tarjetas revisadas</p>
+</div>
+<div class="set-card" onclick="selectSet('Historia Universal')">
+    <i class="fas fa-landmark"></i>
+    <h3>Historia Universal</h3>
+    <p id="progress-Historia-Universal">0/10 tarjetas revisadas</p>
+</div>
+<div class="set-card" onclick="selectSet('Matemáticas')">
+    <i class="fas fa-calculator"></i>
+    <h3>Matemáticas</h3>
+    <p id="progress-Matemáticas">0/10 tarjetas revisadas</p>
+</div>
+<div class="set-card" onclick="selectSet('Ciencias Naturales')">
+    <i class="fas fa-leaf"></i>
+    <h3>Ciencias Naturales</h3>
+    <p id="progress-Ciencias-Naturales">0/10 tarjetas revisadas</p>
+</div>
+<div class="set-card" onclick="selectSet('Tecnología')">
+    <i class="fas fa-microchip"></i>
+    <h3>Tecnología</h3>
+    <p id="progress-Tecnología">0/10 tarjetas revisadas</p>
+</div>
+
         </div>
         <!-- Botón para revisar tarjetas clasificadas -->
         <h3>Revisar tarjetas clasificadas</h3>
